# malagasy

./: .gitignore  README.md  aiprobe.example.yaml  pyproject.toml
aiprobe/: __init__.py  cli.py
aiprobe/core/: __init__.py  config.py  engine.py  llm_client.py  models.py  reporter.py
aiprobe/modules/: __init__.py  base.py
aiprobe/modules/agent/: __init__.py  agent_hijacking.py  privilege_escalation.py  scope_creep.py  tool_chain_abuse.py  unauthorized_tools.py
aiprobe/modules/multimodal/: __init__.py  cross_modal_exploit.py  image_injection.py  ocr_bypass.py  steganographic_attack.py
aiprobe/modules/rag/: __init__.py  citation_hallucination.py  context_overflow.py  indirect_injection.py  knowledge_poisoning.py  retrieval_manipulation.py
